src/tests/testfiles/ternary-operator/types-1.txt
Error at 3:6: Ternary conditional operator needs int as first operand
(3.0 ? "a" : "b");
 ^
